# start-c-double-plus

./: .gitignore  CMakeLists.txt  README.md  firstTest.cpp  main.cpp
practice/basic/: Class_3.cpp  Class_5.cpp  DynamicAllocation.cpp  Dynamic_3.cpp  Function_4.cpp  Pointer_ex1.cpp
practice/exam/: Wmv.cpp  WmvCopyVersion.cpp  WmvProgram.cpp  WmvProgram.h
practice/exam/middle/: Wmv.cpp  Wmv.h  WmvMain.cpp
practice/header/: Counter_1.cpp  Counter_1.h
practice/header/person_test/: Person.cpp  Person.h  PersonMain.cpp
